--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <h1>This is my portfolio by Valtteri Tila</h1>
 <h2>I'm a Web Developer</h2>
 <hr>
-<h3><a href="../2.4 Movie Ranking Project/index.html">Series ranking project</a></h3>
+<h3><a href="./public/movie-ranking.html">Series ranking project</a></h3>
 <img src="./assets/images/ss movie ranking.png" height="200" alt="Series ranking picture. 1st is Game of thrones, 2nd is Prison break and 3rd is Money heist.">
 <br><br>
-<h3><a href="../3.4 Birthday Invite Project/index.html">Birthday invite project</a></h3>
+<h3><a href="./public/birthday-invite.html">Birthday invite project</a></h3>
 <img src="./assets/images/screenshit bday invite.png" alt="Birthday invite card" height="200">
 <br><br><hr>
 <strong><a href="./public/contact.html">Contact me</a></strong>
